<?xml version="1.0" encoding="utf-8"?>
<resources>

<string name="app_name">AndroidCam</string>
<string name="hint_email">Email</string>
<string name="hint_password">Password</string>
<string name="hint_name">Fullname</string>
<string name="btn_login">LOGIN</string>
<string name="btn_register">REGISTER</string>
<string name="btn_link_to_register">Not a member? Sign up now.</string>
<string name="btn_link_to_login">Already registred! Login Me.</string>
<string name="welcome">Welcome</string>
<string name="btn_logout">LOGOUT</string>
<string name="name">Fullname</string>
<string name="welcome_to_androidcam">Welcome to AndroidCam</string>
<string name="start_camera">Start Camera</string>
<string name="logs">Logs</string>
<string name="logout">Logout</string>
<string name="androidcam_login">AndroidCam Login</string>
<string name="registeration">Registeration</string>
<string name="stop">Stop</string>

</resources>